--- a/Lab_4 Assignment/source/app/src/main/AndroidManifest.xml
+++ b/Lab_4 Assignment/source/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="ASE LAB-4"
+        android:label="maninandan"
         android:theme="@style/AppTheme" >
         <activity
             android:name="MainActivity"
-            android:label="ASE LAB-4" >
+            android:label="maninandan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
