--- a/Lab_4 Assignment/source/app/src/main/AndroidManifest.xml
+++ b/Lab_4 Assignment/source/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="maninandan"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="MainActivity"
+            android:name="Main"
             android:label="maninandan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="LoginActivity" android:theme="@style/AppTheme.Dark" />
-        <activity android:name="SignupActivity" android:theme="@style/AppTheme.Dark" />
+        <activity android:name="Login" android:theme="@style/AppTheme.Dark" />
+        <activity android:name="Signup" android:theme="@style/AppTheme.Dark" />
     </application>
 
 </manifest>
